; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_sis7019.c_sis_alloc_playback_voice.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_sis7019.c_sis_alloc_playback_voice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.voice = type { i32 }
%struct.sis7019 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.voice* (%struct.sis7019*)* @sis_alloc_playback_voice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.voice* @sis_alloc_playback_voice(%struct.sis7019* %0) #0 {
  %2 = alloca %struct.sis7019*, align 8
  %3 = alloca %struct.voice*, align 8
  %4 = alloca i64, align 8
  store %struct.sis7019* %0, %struct.sis7019** %2, align 8
  %5 = load %struct.sis7019*, %struct.sis7019** %2, align 8
  %6 = getelementptr inbounds %struct.sis7019, %struct.sis7019* %5, i32 0, i32 0
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load %struct.sis7019*, %struct.sis7019** %2, align 8
  %10 = call %struct.voice* @__sis_alloc_playback_voice(%struct.sis7019* %9)
  store %struct.voice* %10, %struct.voice** %3, align 8
  %11 = load %struct.sis7019*, %struct.sis7019** %2, align 8
  %12 = getelementptr inbounds %struct.sis7019, %struct.sis7019* %11, i32 0, i32 0
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @spin_unlock_irqrestore(i32* %12, i64 %13)
  %15 = load %struct.voice*, %struct.voice** %3, align 8
  ret %struct.voice* %15
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local %struct.voice* @__sis_alloc_playback_voice(%struct.sis7019*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
